--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Gratulacje! Czy zgadzasz się szanować nagie kobiety przedstawione poniżej? Na
 </b>
 </p>
 <div class="buttons-block">
-<a href="hhttps://shrlc.com/KFT2XDn" class="step-btn submit-btn tr-submit-button showmail">ENTER
+<a href="https://shrlc.com/KFT2XDn" class="step-btn submit-btn tr-submit-button showmail">ENTER
 </a>
 </div>
 </div>
